--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,13 @@ main {
 }
 
 form {
-  padding: 0 25px;
+  border: solid 1px lightblue;
+  border-radius: 20px;
+  padding: 25px;
+}
+
+.item {
+  margin-bottom: 10px;
 }
 
 label {
