--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fefefe;
+  background-color: #e5e5f7;
+opacity: 0.8;
+background-image:  linear-gradient(30deg, #fefefe 12%, transparent 12.5%, transparent 87%, #fefefe 87.5%, #fefefe), linear-gradient(150deg, #fefefe 12%, transparent 12.5%, transparent 87%, #fefefe 87.5%, #fefefe), linear-gradient(30deg, #fefefe 12%, transparent 12.5%, transparent 87%, #fefefe 87.5%, #fefefe), linear-gradient(150deg, #fefefe 12%, transparent 12.5%, transparent 87%, #fefefe 87.5%, #fefefe), linear-gradient(60deg, #fefefe77 25%, transparent 25.5%, transparent 75%, #fefefe77 75%, #fefefe), linear-gradient(60deg, #fefefe77 25%, transparent 25.5%, transparent 75%, #fefefe77 75%, #fefefe77);
+background-size: 20px 35px;
+background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
 }
 
 code {
@@ -14,8 +18,10 @@ code {
 }
 
 .container {
-  margin: 20px;
-  padding: 10px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  max-width: 850px;
 }
 
 h1 {
