--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ code {
   padding: 20px;
   background-color: #ffffff;
   max-width: 850px;
+  border: solid 5px lightblue;
+  border-radius: 25px;
 }
 
 h1 {
